--- a/ludo_style.css
+++ b/ludo_style.css
@@ -19,27 +19,33 @@
   height: 500px;    
   margin: auto;    
   margin-top: 80px;
-  border:1px solid;
+  /*border:1px solid;*/
 }
+
+img {
+  opacity: 0.5;
+}
+
 .row1,
 .row3 {    
   width: 100%;    
   height: 40%;
   border:1px solid;
 } 
+
 .row2 {    
   width: 100%;    
   height: 20%;
-  border:1px solid;
-
+  /*border:1px solid;*/
 } 
+
 .row1-col1,
 .row1-col3,
 .row3-col1,
 .row3-col3 {    
   height: 100%;    
   width: 40%;
-  border: 1px solid;
+  /*border: 1px solid;*/
 } 
 
 .row1-col2,
@@ -47,7 +53,7 @@
 {    
   height: 100%;    
   width: 20%;
-  border: 1px solid;
+  /*border: 1px solid;*/
   float: left;
 }
 
@@ -59,30 +65,30 @@
 }
 
 .one {
-  margin-top: 0.5px;
-  margin-left: 0.8px;
+  /*margin-top: 0.5px;*/
+  /*margin-left: 0.8px;*/
   float: left;
-  height: 32px;
-  width: 31.5px;
+  height: 33px;
+  width: 33.2px;
   border: 1px solid;
 }
 
 .two1 {
   /*background-color: red;*/
-  height:31%;
+  height:34%;
   width: 100%;
   /*border: 1px solid;*/
-  margin-top: 0.8px;
+  /*margin-top: 0.8px;*/
   /*margin-left: 0.5px;*/
   /*float: left; */
 }
 
 .two2{
-  height: 31px;
-  width: 31.5px;
+  height: 33.3px;
+  width: 33px;
   border: 1px solid;
   float: left;
-  margin-left: 0.8px;
+  /*margin-left: 1px;*/
 }
 
 .row1-col3,
@@ -102,7 +108,7 @@
 {
   height: 100%;
   width: 40%;
-  border: 1px solid blue;
+  border: 1px solid ;
 }
 
 .row1-col1 {
@@ -159,7 +165,16 @@
   background-color: green;
 }
 
-
+.box {
+    border-top: 15px solid blue;
+    border-right: 15px solid green;
+    border-left: 15px solid red;
+    border-bottom: 15px solid yellow;
+    margin: auto;
+    height: 99.8%;
+    width: 20%;
+    /*background-color: grey;*/
+}
 
 
 
